<resources>
    <string name="app_name">Candidato Messenger</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="facebook_app_id">182530312160897</string>
    <string name="web">Facebook Candidato</string>
    <string name="jingle_n_tocador">JINGLE\n TOCADOR</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="welcome_msg">BEM VINDO!</string>
    <string name="sign_out">SAIR DA SALA</string>
    <string name="contacts_permission_rationale">ACESSO A CONTA É NECESSÁRIO.</string>
    <string name="invite_menu_label">CONVIDAR</string>
    <string name="invitation_message">JUNTE-SE A NÓS.</string>
    <string name="invitation_cta">Call to action</string>
    <string name="invitation_title">CONVITE DO USUÁRIO</string>
    <string name="sign_in">clique e ENTRE!</string>
    <string name="sign_up">SAIR!</string>
    <string name="fresh_config">ATUALIZE CONVERSA</string>
    <string name="cause_crash">SAIDA IMEDIATA</string>
    <string name="title_activity_main3_face_b">Facebook</string>
    <string name="Santinho">Button</string>

    <!-- Formulario Contato -->
    <string name="email">malcoln.java@gmail.com</string>

    <string name="error_player">Erro ao inicializar o YouTubePlayer (%1$s)</string>
    <string name="endere_o">Endereço:</string>
    <string name="horario">horario</string>

    <!-- Ação compartilhar-->
    <string name="acao_compartilhar">Compartilhar</string>
    <string name="e_mail">e.mail</string>
    <string name="eventos">Eventos</string>
    <string name="facebook">FaceBook</string>
    <string name="noticias">Noticias</string>
    <string name="chat_grupo">Chat Grupo</string>
    <string name="entrevistas">Entrevistas</string>
    <string name="propostas">Propostas</string>
    <string name="esta_p_gina_o_candidato_pode_colocar_o_seu_ponto_de_vista_sobre_os_problemas_e_dificuldades_que_ocorrem_na_cidade_ou_gest_o_atual_n_n_o_momento_de_demonstrar_que_voc_candidato_est_a_par_e_tem_consci_ncia_das_dificuldades_apresentadas_n_n_o_momento_de_voc_candidato_dissertar_seu_ponto_de_vista_e_demonstrar_o_quanto_voc_tem_vis_o_para_na_p_gina_de_propostas_e_projetos_integrar_o_seu_trabalho_com_grande_maestria">Esta página o candidato pode colocar o seu ponto de vista sobre os problemas e dificuldades que ocorrem na cidade ou gestão atual.\n \n È o momento de demonstrar que você candidato está a par e tem consciência das dificuldades apresentadas. \n \n É o momento de você candidato dissertar seu ponto de vista e demonstrar o quanto você tem visão, para na página de propostas e projetos integrar o seu trabalho com grande maestria.</string>
    <string name="nossa_cidade">NOSSA CIDADE:</string>
    <string name="projetos">PROJETOS</string>

    <!-- ADS GOOGLE-->
    <string name="banner_ad_unit_id">ca-app-pub-4837822171149439/2044462502</string>
    <string name="compartilhar">compartilhar +</string>


</resources>
