<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"

    android:background="@drawable/cand1">
  <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="0dp"
        android:paddingTop="0dp"
        android:layout_gravity="center"
         >
      <ImageView
          android:layout_width="match_parent"
          android:layout_height="200dp"
          android:id="@+id/invisivel"
          android:contentDescription=""
          tools:ignore="ContentDescription" />


      <ImageView
          android:layout_below="@+id/invisivel"
        android:layout_width="match_parent"
        android:layout_height="3sp"
        android:background="@drawable/side_nav_bar"
        android:id="@+id/imageView3"
          tools:ignore="ContentDescription,SmallSp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/imageView3"
        android:layout_gravity="center_horizontal"
        android:id="@+id/linearLayout1"
        tools:ignore="DisableBaselineAlignment">

        <LinearLayout
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" >
            <android.support.v7.widget.AppCompatImageView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/perfil_capa"
                android:id="@+id/nav_mapa" />

            <TextView
                android:layout_gravity="center"
                android:textColor="@color/textoIcones"
                style="@style/TextoCandidatos"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:text="      Perfil      "
                tools:ignore="HardcodedText" />
        </LinearLayout>
        <LinearLayout
            android:padding="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            >
            <android.support.v7.widget.AppCompatImageView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_entrevistas"
                android:id="@+id/nav_video" />
            <TextView
                android:layout_gravity="center"
                android:textColor="@color/textoIcones"
                style="@style/TextoCandidatos"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:text="@string/entrevistas"/>

        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            >
            <android.support.v7.widget.AppCompatImageView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/face_capa"
                android:id="@+id/nav_face" />
            <TextView
                android:layout_gravity="center"
                android:textColor="@color/textoIcones"
                style="@style/TextoCandidatos"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:text="@string/facebook"/>
        </LinearLayout>

    </LinearLayout>

        <LinearLayout

            android:layout_below="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/linearLayout2"
            tools:ignore="DisableBaselineAlignment">


          <LinearLayout
              android:layout_weight="1"
              android:orientation="vertical"
              android:layout_width="wrap_content"
              android:layout_height="match_parent"
              >
              <android.support.v7.widget.AppCompatImageView
                  android:layout_gravity="center"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:src="@drawable/ic_propostas"
                  android:id="@+id/nav_onibus" />
              <TextView
                  android:layout_gravity="center"
                  android:textColor="@color/textoIcones"
                  style="@style/TextoCandidatos"
                  android:layout_width="wrap_content"
                  android:layout_height="match_parent"
                  android:textAlignment="center"
                  android:text="@string/propostas"/>

          </LinearLayout>


          <LinearLayout
              android:layout_weight="1"
              android:orientation="vertical"
              android:layout_width="wrap_content"
              android:layout_height="match_parent">
              <android.support.v7.widget.AppCompatImageView
                  android:layout_gravity="center"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:src="@drawable/ic_noticias"
                  android:id="@+id/nav_noticias" />
              <TextView
                  android:layout_gravity="center"
                  android:textColor="@color/textoIcones"
                  style="@style/TextoCandidatos"
                  android:layout_width="wrap_content"
                  android:layout_height="match_parent"
                  android:textAlignment="center"
                  android:text="@string/noticias"/>
          </LinearLayout>
          <LinearLayout
              android:layout_weight="1"
              android:orientation="vertical"
              android:layout_width="wrap_content"
              android:layout_height="match_parent"
              >
              <android.support.v7.widget.AppCompatImageView
                  android:layout_gravity="center"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:src="@drawable/ic_agenda"
                  android:id="@+id/nav_manage" />

              <TextView
                  android:layout_gravity="center"
                  android:textColor="@color/textoIcones"
                  style="@style/TextoCandidatos"
                  android:layout_width="wrap_content"
                  android:layout_height="match_parent"
                  android:textAlignment="center"
                  android:text="@string/eventos"
                  android:id="@+id/textView27" />

          </LinearLayout>
      </LinearLayout>

      <LinearLayout

          android:layout_below="@+id/linearLayout2"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"

          android:paddingBottom="12dp"
          android:layout_alignParentLeft="true"
          android:layout_alignParentStart="true"
          android:id="@+id/linearLayout3"
          android:baselineAligned="false">

          <LinearLayout
              android:layout_weight="1"
              android:orientation="vertical"
              android:layout_width="wrap_content"
              android:layout_height="match_parent"
              >
              <android.support.v7.widget.AppCompatImageView
                  android:layout_gravity="center"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:src="@drawable/ic_jingle"
                  android:id="@+id/nav_send" />

              <TextView
                  android:layout_gravity="center"
                  android:textColor="@color/textoIcones"
                  style="@style/TextoCandidatos"
                  android:layout_width="wrap_content"
                  android:layout_height="match_parent"
                  android:textAlignment="center"
                  android:text="   Jingle    "
                  tools:ignore="HardcodedText" />
          </LinearLayout>

          <LinearLayout
              android:layout_weight="1"
              android:orientation="vertical"
              android:layout_width="wrap_content"
              android:layout_height="match_parent">
              <android.support.v7.widget.AppCompatImageView
                  android:layout_gravity="center"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:src="@drawable/ic_chat"
                  android:id="@+id/nav_chat" />

              <TextView
                  style="@style/TextoCandidatos"
                  android:layout_width="wrap_content"
                  android:layout_height="match_parent"
                  android:textAlignment="center"
                  android:layout_gravity="center"
                  android:text="@string/chat_grupo"
                  android:id="@+id/textView24"
                  android:textColor="@color/textoIcones"/>
          </LinearLayout>
          <LinearLayout
              android:layout_weight="1"
              android:orientation="vertical"
              android:layout_width="wrap_content"
              android:layout_height="match_parent"
              >
              <android.support.v7.widget.AppCompatImageView
                  android:layout_gravity="center"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:src="@drawable/ic_msg"
                  android:id="@+id/nav_msg" />

              <TextView
                  android:layout_gravity="center"
                  style="@style/TextoCandidatos"
                  android:layout_width="wrap_content"
                  android:layout_height="match_parent"
                  android:textAlignment="center"
                  android:text="@string/e_mail"
                  android:id="@+id/textView25"
                  android:textColor="@color/textoIcones"/>
          </LinearLayout>
      </LinearLayout>
      <ImageView
          android:layout_alignParentBottom="true"
          android:paddingBottom="2dp"
          android:layout_width="match_parent"
          android:layout_height="3sp"
          android:background="@drawable/side_nav_bar"
          android:id="@+id/imageView4"
          tools:ignore="ContentDescription,SmallSp" />



  </RelativeLayout>


</ScrollView>



